# BlackFilmDatabase_GUI

./: CMakeLists.txt  CustomItemSelectionModel.cpp  CustomItemSelectionModel.h  CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.h  FilmHighlightPage.cpp  FilmHighlightPage.h  HoverButton.cpp  HoverButton.h  MainGraphicsView.cpp  MainGraphicsView.h  MovieTableModel.cpp  MovieTableModel.h  README.md  ResultsPage.cpp  ResultsPage.h  SearchPage.cpp  SearchPage.h  TransposedMovieTableModel.cpp  TransposedMovieTableModel.h  main.cpp
